# autolint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
auto_lint/: config.yaml  frames.py  fs.py  linters.py  load_conf.py  main.py  old.py  renderers.py  schemas.py
lintify/: cli.py  compat.py  config.yaml  core.py  frames.py  fs.py  linters.py  load_conf.py  main.py  output.py  renderers.py  schemas.py  utils.py
tests/: test_utils.py
