[tool.poetry]
name = "auto-lint"
version = "0.1.0"
description = ""
authors = ["Titov Anton <webdev@titovanton.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.11.1"
flake8 = "^7.1.1"
watchdog = "^4.0.1"
click = "^8.1.7"
pyyaml = "^6.0.2"
pydantic = "^2.8.2"
types-pyyaml = "^6.0.12.20240808"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
autolint = "auto_lint.cli:main"
