[tool.poetry]
name = "lintify"
version = "0.0.1"
description = ""
authors = ["Titov Anton <webdev@titovanton.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^4.0.1"
click = "^8.1.7"
pyyaml = "^6.0.2"
pydantic = "^2.8.2"
types-pyyaml = "^6.0.12.20240808"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
lintify = "lintify.cli:main"
